Finished draft of first page

--- a/src/app/bookmarks/bookmarks.component.html
+++ b/src/app/bookmarks/bookmarks.component.html
@@ -1,1 +1,1 @@
-<a class="bookmark-name" [href]="bookmarkLink">{{bookmarkName}}</a>
+<a class="bookmark-name" [href]="bookmark.url">{{bookmark.name}}</a>
