--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,9 +10,9 @@
         </nav>
         <nav>
             <ul class="bookmarks">
-                <app-bookmarks></app-bookmarks>
-                <app-bookmarks></app-bookmarks>
-                <app-bookmarks></app-bookmarks>
+                <app-bookmarks [bookmark]="aboutMeBookmark"></app-bookmarks>
+                <app-bookmarks [bookmark]="projectsBookmark"></app-bookmarks>
+                <app-bookmarks [bookmark]="cvBookmark"></app-bookmarks>
             </ul>
         </nav>
     </div>
