--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+    --primary-color: #ffffff /*#ee5d9e;*/
+    --primary-color-dark: #c71573;
+
+    --secondary-color: #e04f58;
+    --secondary-color-dark: #d62631;
+
+    --tertiary-color: #e08f4f;
+    --tertiary-color-dark: #d67426;
+  }
