Refactored About Me Code.

--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -4,7 +4,7 @@
             Hi, I'm Ralf Duli.
         </p>
         <p class="description-subtitle">
-        I am a Computer Science student at Trinity College Dublin. <br /> <br />
+        I am a Computer Science student studying at Trinity College Dublin. <br /> <br />
         I have a strong foundation in Software Engineering and experience with
         various programming languages. To the right, you can find some of my
         accomplishments.
