--- a/src/app/accomplishment/accomplishment.component.html
+++ b/src/app/accomplishment/accomplishment.component.html
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="accomplishment-container">
     <div class="side-column">
-        <img class="bulletpoint-image" src="/../assets/tesseract.png">
+        <img class="bulletpoint-image" src="/../assets/arrow.png">
     </div>
     <div class="description">
         <p class="heading">
