--- a/src/app/aboutme/aboutme.component.css
+++ b/src/app/aboutme/aboutme.component.css
@@ -1,27 +1,31 @@
 .about-me {
     display: flex;
     flex-direction: row;
-    background-color: var(--primary-color);
+    background-color: var(--brand-color);
 }
 
 .my-description {
     flex: 1;
-
     padding-left: 25px;
     padding-top: 30px;
     font-family: 'Roboto';
     font-style: normal;
+    color: #f0dada;
+    text-shadow: 1px 1px #826c6c ;/*#ba9797; */
     font-weight: 600;
     font-size: 16px;
     line-height: 150%;
+    margin-left: 20px;
 }
 
 .description-heading {
-    font-size: 40px;
+    
+    font-size: 60px;
 }
 
 .description-subtitle {
-    width: 700px;
+    font-size: 20px;
+    width: 500px;
 }
 
 .accomplishments {
