--- a/src/app/accomplishment/accomplishment.component.css
+++ b/src/app/accomplishment/accomplishment.component.css
@@ -1,19 +1,15 @@
-.container {
+.accomplishment-container {
     display: flex;
     flex-direction: row;
-    background-color: var(--secondary-color) ;
+    background-color: #ffffff ;
     border-radius: 10px;
 }
-/* 
-.container:hover {
-    background-color: var(--secondary-color-dark);
-} */
 
 .bulletpoint-image {
     background-size: cover;
     width: 30px;
     height: 30px;
-    margin-right: 20px;
+    margin-right: 10px;
     margin-top: 10px;
     margin-left: 5px;
 }
