Created CV section draft.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div class="app">
 <app-navbar></app-navbar>
 <app-aboutme></app-aboutme>
+<!-- <app-projects-section></app-projects-section> -->
+<app-cv-section></app-cv-section>
 </div>
