--- a/src/app/cv-section/cv-section.component.html
+++ b/src/app/cv-section/cv-section.component.html
@@ -1,4 +1,7 @@
 <div class="cv-section">
-    <img class="cv-left-image">
-    <img class="cv-right-image">
+    <p class="heading">My CV</p>
+    <div class="cv-images">
+        <img class="cv-left-image" alt="cv-left-image" src="/../assets/cv-left-image.png">
+        <img class="cv-right-image" alt="cv-right-image" src="/../assets/cv-right-image.png">
+    </div>
 </div>
