CV section visually improved.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="app">
-<app-navbar></app-navbar>
-<app-aboutme></app-aboutme>
+<app-navbar class="navbar"></app-navbar>
+<app-aboutme class="about-me"></app-aboutme>
 <!-- <app-projects-section></app-projects-section> -->
-<app-cv-section></app-cv-section>
+<app-cv-section class="cv"></app-cv-section>
 </div>
