--- a/src/app/cv-section/cv-section.component.html
+++ b/src/app/cv-section/cv-section.component.html
@@ -1,7 +1,6 @@
 <div class="cv-section">
     <p class="heading">My CV</p>
-    <div class="cv-images">
-        <img class="cv-left-image" alt="cv-left-image" src="/../assets/cv-left-image.png">
-        <img class="cv-right-image" alt="cv-right-image" src="/../assets/cv-right-image.png">
+    <div class="img-container">
+        <img class="cv-image" [src]="imgUrl" alt="cv-image">
     </div>
 </div>
