--- a/src/app/accomplishment/accomplishment.component.css
+++ b/src/app/accomplishment/accomplishment.component.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     background-color: #ffffff ;
     border-radius: 10px;
+    outline: 5px solid var(--brand-color-dark);
 }
 
 .bulletpoint-image {
@@ -17,6 +18,7 @@
 .description {
     display: flex;
     flex-direction: column;
+    margin-right: 5%;
 }
 
 .heading {
