--- a/src/app/cv-section/cv-section.component.css
+++ b/src/app/cv-section/cv-section.component.css
@@ -3,7 +3,7 @@
     margin-top: 0px;
     text-align: center;
     color: #ffffff;
-    text-shadow: 2px 2px #bfa0a0;
+    text-shadow: 2px 2px var(--brand-color-dark) ;
 }
 
 .cv-section {
