--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,8 @@
     --primary-color: #ffffff /*#ee5d9e;*/
     --primary-color-dark: #c71573;
 
-    --brand-color: #e04f58;
-    --brand-color-dark: #d62631;
+    --brand-color: #c1646a ;/*#e66f77;  #e04f58;*/
+    --brand-color-dark: #8f343a; /*#d62631; */
 
     --tertiary-color: #e08f4f;
     --tertiary-color-dark: #d67426;
