--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -47,6 +47,11 @@
     height: 64px;
 }
 
+button {
+    border-radius: 30%;
+    background-color: #000000;
+}
+
 .bookmarks {
     list-style-type: none;
     padding: 80px 0px 0px;
@@ -64,7 +69,6 @@ a:visited {
     padding: 12px 24px;
     gap: 8px;
 
-    background: #000000;
     color: #FFFFFF;
     border: 1px solid #000000;
 }
@@ -78,7 +82,6 @@ a:visited {
     gap: 8px;
 
     color: #FFFFFF;
-    background: #000000;
     
     border: 1px solid #000000;
 }
