--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 :root {
-    --primary-color: #ffffff /*#ee5d9e;*/
-    --primary-color-dark: #c71573;
-
-    --brand-color: #c1646a ;/*#e66f77;  #e04f58;*/
-    --brand-color-dark: #8f343a; /*#d62631; */
-
-    --tertiary-color: #e08f4f;
-    --tertiary-color-dark: #d67426;
+    --brand-color: #85857d;
+    --brand-color-dark: #464638;
+    --tertiary-color: #ba927d;
   }
