Added automatic scrolling, styled site better

--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -1,4 +1,4 @@
-<div class="about-me">
+<div id="AboutMe" class="about-me">
     <div class="my-description">
         <p class="description-heading">
             Hi, I'm Ralf Duli.
