--- a/src/app/bookmarks/bookmarks.component.html
+++ b/src/app/bookmarks/bookmarks.component.html
@@ -1,1 +1,1 @@
-<a class="bookmark-name" [href]="bookmark.url">{{bookmark.name}}</a>
+<div class="bookmark-name" (click)="scrollToElem(bookmark.id)">{{bookmark.name}}</div>
