--- a/src/app/cv-section/cv-section.component.html
+++ b/src/app/cv-section/cv-section.component.html
@@ -1,4 +1,4 @@
-<div class="cv-section">
+<div id="CV" class="cv-section">
     <p class="heading">My CV</p>
     <div class="img-container">
         <img class="cv-image" [src]="imgUrl" alt="cv-image">
