--- a/src/app/bookmarks/bookmarks.component.css
+++ b/src/app/bookmarks/bookmarks.component.css
@@ -1,10 +1,10 @@
 .bookmark-name {
-    width: 330.67px;
-    height: 56px;
+    width: 30%;
+    height: 30%;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 130%;
     line-height: 150%;
 
     text-align: center;
@@ -13,31 +13,12 @@
 
     border-bottom: 4px solid #FFFFFF;
 
-    padding: 16px 100px;
+    padding: 5% 100px;
 
     margin-right: 50px;
 }
 
-
-
-/*
-
-box-sizing: border-box;
-
-
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-padding: 16px 32px;
-
-width: 330.67px;
-height: 56px;
-
-border-bottom: 4px solid #FFFFFF;
-
-
-flex: none;
-order: 0;
-flex-grow: 1;
-*/
+.bookmark-name:hover {
+    color: #FFF04E;
+    border-bottom: 4px solid #FFF04E;
+}
