--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -53,6 +53,8 @@ button {
 }
 
 .bookmarks {
+    display: flex;
+    flex-direction: row;
     list-style-type: none;
     padding: 80px 0px 0px;
 }
@@ -60,6 +62,8 @@ button {
 a:visited {
     color: #FFFFFF;
 }
+
+
 
 .linkedin-button {
     display: flex;
@@ -85,3 +89,7 @@ a:visited {
     
     border: 1px solid #000000;
 }
+
+button:hover{
+    transform: scale(1.2);
+ }
