--- a/src/app/projects-section/projects-section.component.html
+++ b/src/app/projects-section/projects-section.component.html
@@ -1,8 +1,7 @@
-<div class="projects-section">
+<div id="Projects" class="projects-section">
     <p class="heading">Projects</p>
     <div class="projects-container">
         <app-project-card [project]="networkRoutingProject"></app-project-card>
         <app-project-card [project]="chessEngineProject"></app-project-card>
-        <!-- <app-project-card [project]="networkRoutingProject"></app-project-card> -->
     </div>
 </div>
